--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,5 +10,5 @@
     config: '{{ local.config }}'
   loop: '{{ logrotate_local | default([]) }}'
   loop_control:
-    loop_var: local
+    loop_var: 'local'
     label: '{{ local.service }}'
