Use libraries for common operations.
Migrate to using standardized libraries for common operations and tests
within the role.

Changed:
* Migrate role to r_pufky.deb collection.
* Migrate common test patterns to r_pufky.lib.tests.
* Minimize use of line-length yamllint disable.
* Standardize molecule test docstrings.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,6 +3,6 @@
   hosts: 'all'
   gather_facts: false
   tasks:
-    - name: 'Default | converge | apply r_pufky.srv.logrotate'
+    - name: 'Default | converge | apply r_pufky.deb.logrotate'
       ansible.builtin.include_role:
-        name: 'r_pufky.srv.logrotate'
+        name: 'r_pufky.deb.logrotate'
