Updated molecule test names.
Changed:
* Updated molecule test names.
* Enable test_diff by default.

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,48 +1,51 @@
 ---
-- name: 'Default | verify | absent state removes file'
+- name: 'Verify | absent state removes file'
   hosts: 'all'
   gather_facts: false
   tasks:
-    - name: 'Default | verify | absent state removes file | dpkg'
+    - name: 'Verify | absent state removes file | dpkg'
       ansible.builtin.include_role:
         name: 'r_pufky.lib.tests'
         tasks_from: 'file.yml'
       vars:
-        test_name: 'Default | verify | absent state removes file | dpkg'
+        test_name: 'Verify | absent state removes file | dpkg'
         test_file: '/etc/logrotate.d/dpkg'
         test_owner: '{{ omit }}'
         test_group: '{{ omit }}'
         test_mode: '{{ omit }}'
         test_state: 'absent'
+        test_diff: true
 
-- name: 'Default | verify | global configuration'
+- name: 'Verify | global configuration'
   hosts: 'all'
   gather_facts: false
   tasks:
-    - name: 'Default | verify | global configuration | logrotate.conf'
+    - name: 'Verify | global configuration | logrotate.conf'
       ansible.builtin.include_role:
         name: 'r_pufky.lib.tests'
         tasks_from: 'copy.yml'
       vars:
-        test_name: 'Default | verify | global configuration | logrotate.conf'
+        test_name: 'Verify | global configuration | logrotate.conf'
         test_src: 'files/logrotate.conf'
         test_file: '/etc/logrotate.conf'
         test_owner: 'root'
         test_group: 'root'
         test_mode: '0644'
+        test_diff: true
 
-- name: 'Default | verify | local configuration'
+- name: 'Verify | local configuration'
   hosts: 'all'
   gather_facts: false
   tasks:
-    - name: 'Default | verify | local configuration | logrotate.conf'
+    - name: 'Verify | local configuration | logrotate.conf'
       ansible.builtin.include_role:
         name: 'r_pufky.lib.tests'
         tasks_from: 'copy.yml'
       vars:
-        test_name: 'Default | verify | local configuration | logrotate.conf'
+        test_name: 'Verify | local configuration | logrotate.conf'
         test_src: 'files/apt'
         test_file: '/etc/logrotate.d/apt'
         test_owner: 'root'
         test_group: 'root'
         test_mode: '0644'
+        test_diff: true
