--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,5 +4,5 @@
 ###############################################################################
 
 # Last time logrotate options were validated against a default configuration.
-logrotate_role_validate_date: '2024-06-23'
-logrotate_role_validate_release: 'bookworm'
+logrotate_role_validate_date: '2025-08-21'
+logrotate_role_validate_release: 'trixie'
